More updates to 0.17 release